--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   impactstory      : 
   lastfm           :
   linkedin         :
-  orcid            : #"http://orcid.org/0000-0001-7608-2266"
+  orcid            : "https://orcid.org/0009-0008-5063-2379"
   pinterest        :
   soundcloud       :
   stackoverflow    : 
