--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Hyeon-Il KIm / PLI Lab in HYU"
 title_separator          : "-"
 name                     : &name "Hyeon-Il Kim"
-description              : &description "Ph.D. Candidate & Teaching Faculty in HYU"
+description              : &description "Ph.D. Candidate in HYU"
 url                      : "https://Iehikim.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Iehikim/Iehikim.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hyeon-Il Kim"
   avatar           : "Profile2.jpeg"
-  bio              : "Ph.D. Candidate & Teaching Faculty in Hanyang University"
+  bio              : "Ph.D. Candidate in Hanyang University"
   location         : "Seoul, Republic of Korea"
   employer         :
   pubmed           : 
