--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/hyeon-il-kim/"
+  linkedin         : "https://linkedin.com/in/hyeon-il-kim/"
   orcid            : "https://orcid.org/0009-0008-5063-2379"
   pinterest        :
   soundcloud       :
