--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hyeon-Il Kim"
-  avatar           : "Profile2.jpeg"
+  avatar           : "Profile.jpeg"
   bio              : "Ph.D. Candidate in Hanyang University"
   location         : "Seoul, Republic of Korea"
   employer         :
